2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml: Bump MD version.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml: Merged the extension points for
	  project and solution option panels into a single extension point. A
	  single extension point will now be used for all kinds of items.
	  Extension conditions can be used to make panels visible only for
	  some specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileProjectServiceExtension.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileGeneratorTool.cs, IMakefileHandler.cs,
	  MonoDevelop.Autotools.addin.xml, ImportMakefileDialog.cs,
	  MakefileOptionPanelWidget.cs, MakefileReaderExtension.cs,
	  MakefileProject.cs, SolutionMakefileHandler.cs,
	  SimpleProjectMakefileHandler.cs, Handler.cs, SolutionDeployer.cs,
	  MakefileProjectServiceExtension.cs, MakefileOptionPanel.cs,
	  FileNodeBuilderExtension.cs, templates/autogen.sh.template,
	  templates/rules.make, GenerateMakefilesDialog.cs,
	  MakefileIntegrationFeature.cs, AutotoolsContext.cs, Commands.cs,
	  gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs,
	  gtk-gui/gui.stetic, TarballBuilderEditorWidget.cs, MakefileData.cs,
	  CustomMakefile.cs: New project model changes.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs: Updated.
	* MakefileData.cs: Added regex for boo messages.

2008-03-27  Ankit Jain  <jankit@novell.com>

	* templates/Makefile.solution.template:
	* templates/make-dist.targets:
	* templates/rules.make: Remove evil bash arrays.
	Fixes from Raja Harinath.
