@@ -331,9 +331,9 @@ namespace MonoDevelop.Autotools
 					}
 
 					// Register files generated by the compiler
-					ctx.AddBuiltFile (project.GetOutputFileName (config.Id));
+					ctx.AddBuiltFile (project.GetOutputFileName (combineConfig.Id));
 					if (config.DebugMode)
-						ctx.AddBuiltFile (project.GetOutputFileName (config.Id) + ".mdb");
+						ctx.AddBuiltFile (project.GetOutputFileName (combineConfig.Id) + ".mdb");
 
 					if (buildEnabled && pkgs.Count > 0)
 						ctx.AddRequiredPackages (combineConfig.Id, pkgs);
@@ -527,7 +527,7 @@ namespace MonoDevelop.Autotools
 			//@deployFiles can have duplicates
 			Dictionary<string, DeployFile> uniqueDeployFiles = new Dictionary<string, DeployFile> ();
 			foreach (DeployFile dfile in deployFiles) {
-				if (dfile.SourcePath == project.GetOutputFileName (config.Id))
+				if (dfile.SourcePath == project.GetOutputFileName (configSection.Name))
 					continue;
 
 				// DeployFileCollection can have duplicates, ignore them
