@@ -1,5 +1,10 @@
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* SimpleProjectMakefileHandler.cs: GetOutputFileName now requires a
+	  solution configuration, not a project configuration.
+
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* MonoDevelop.Autotools.addin.xml: Bump MD version.
 
 2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 
